@startuml

title __NUTRICION's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace Nutricion {
      class com.example.cardihealt.Nutricion.Adapter_Nutricion {
          ~ context : Context
          ~ myNutricion : List_Nutricion[]
          + Adapter_Nutricion()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Nutricion {
      class com.example.cardihealt.Nutricion.Adapter_Nutricion.ViewHolder {
          ~ alimentoName : TextView
          ~ historiaAlimento : TextView
          ~ imageAlimento : ImageView
          + ViewHolder()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Nutricion {
      class com.example.cardihealt.Nutricion.List_Nutricion {
          - alimento : String
          - imagenAlimento : Integer
          - leyendaAlimento : String
          + List_Nutricion()
          + getAlimento()
          + getImagenAlimento()
          + getLeyendaAlimento()
          + setAlimento()
          + setImagenAlimento()
          + setLeyendaAlimento()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace Nutricion {
      class com.example.cardihealt.Nutricion.Nutricion {
          # onCreate()
      }
    }
  }
  

  com.example.cardihealt.Nutricion.Adapter_Nutricion -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.cardihealt.Nutricion.Adapter_Nutricion +-down- com.example.cardihealt.Nutricion.Adapter_Nutricion.ViewHolder
  com.example.cardihealt.Nutricion.Adapter_Nutricion.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.cardihealt.Nutricion.Nutricion -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
